fix modal z-index

--- a/src/pages/landing/sass/gallery.module.scss
+++ b/src/pages/landing/sass/gallery.module.scss
@@ -25,6 +25,7 @@
   top: 0;
   bottom: 0;
   padding: 15px;
+  z-index: 2;
   animation: fadein 0.4s;
 }
 
